# aivestia

./: .gitignore  README.md  README.zh.md
ai-service/: core.py  database.py  ingestion.py  main.py  pyproject.toml
ai-service/agents/: chat_agent.py  portfolio_agent.py
ai-service/graph/: consts.py  graph.py  state.py
ai-service/graph/chains/: hallucination_grader.py  retrieval_grader.py  router.py
ai-service/graph/chains/tests/: test_chains.py
ai-service/graph/nodes/: chat_agent_node.py  final_llm_node.py  hallucination_check_node.py  portfolio_agent_node.py  router_node.py
ai-service/services/: market_data_service.py  news_service.py  performance_service.py  portfolio_service.py  retrieval_service.py
ai-service/tools/: market_tools.py  portfolio_tools.py  retrieval_tools.py
ai-service/utils/: logger.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AllocationRow.jsx  ChatSidebar.jsx  PortfolioForm.jsx  SimulationCard.jsx  SourcesPanel.jsx  SuggestionBar.jsx
frontend/src/pages/: AboutPage.jsx  ChatPage.jsx  HomePage.jsx  HowItWorksPage.jsx
frontend/src/utils/: markdown.js
